Construct Solaroids, Game.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Solaroids!</title>
+    <script src="lib/util.js"></script>
+    <script src="lib/movingObject.js"></script>
+    <script src="lib/solaroid.js"></script>
+    <script src="lib/game.js"></script>
+
   </head>
   <body>
 
