--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
     <script src="lib/movingObject.js"></script>
     <script src="lib/solaroid.js"></script>
     <script src="lib/game.js"></script>
+    <script src="lib/gameView.js"></script>
 
   </head>
   <body>
+    <canvas id="game-canvas"></canvas>
 
+
+    <script type="application/javascript">
+      var canvas = document.getElementById("game-canvas");
+      var ctx = canvas.getContext("2d");
+      Solaroids.Game.addSolaroids();
+      gameView = Solaroids.GameView
+    </script>
   </body>
 </html>
