--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="lib/game.js"></script>
     <script src="lib/gameView.js"></script>
     <script src="lib/ship.js"></script>
+    <script src="keymaster.js"></script>
 
   </head>
   <body>
