Add ship health bar.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="lib/gameView.js"></script>
     <script src="lib/ship.js"></script>
     <script src="lib/beam.js"></script>
+    <script src="lib/healthBar.js"></script>
     <script src="lib/asteroid.js"></script>
     <script src="keymaster/keymaster.js"></script>
     <style>
